[package]
name = "enegine"
version = "0.1.0"
edition = "2018"
authors = ["brsnb <49287229+brsnb@users.noreply.github.com>"]

[dependencies]
ash = "0.31"
ash-window = "0.5"
env_logger = "0.8"
gltf = "0.15"
image = "0.23"
lazy_static = "1.4"
log = "0.4"
obj = "0.10"
raw-window-handle = "0.3"
shaderc = "0.7"
ultraviolet = "0.8"
vk-mem = "0.2"
winit = "0.24"
